2010-01-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup for proxy URI handling.
	* src/AbstractCommand.cc

2010-01-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-metadata-only option.  If true is given to this option,
	aria2 downloads metadata only. The file(s) described in metadata
	will not be downloaded. This option has effect only when
	BitTorrent Magnet URI is used. See also --bt-save-metadata option.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc
	* src/UTMetadataPostDownloadHandler.cc
	* src/download_helper.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h

2010-01-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed memory leak. Commands stored in std::deque<Command*> are not
	deleted when exception is thrown. Make sure that when passing
	std::deque<Command*> to function to store Commands, handle
	exception and delete these Commands.
	* src/AbstractCommand.cc
	* src/CheckIntegrityCommand.cc
	* src/FileAllocationCommand.cc
	* src/RequestGroup.cc
	* src/TrackerWatcherCommand.cc

2010-01-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced '/' and '_' with '_' in HTTP/FTP filename.
	* src/A2STR.cc
	* src/A2STR.h
	* src/FtpNegotiationCommand.cc
	* src/HttpResponseCommand.cc
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2010-01-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Treat --dir="" as --dir="."
	* src/FtpNegotiationCommand.cc
	* src/HttpResponseCommand.cc
	* src/Metalink2RequestGroup.cc
	* src/UTMetadataPostDownloadHandler.cc
	* src/bittorrent_helper.cc
	* src/download_helper.cc
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2010-01-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code clean up.
	* src/main.cc

2010-01-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reset GID to 1 when they reach maximum value. Rewritten
	CUIDCounter::newID()
	* src/CUIDCounter.h
	* src/RequestGroup.cc
	* src/RequestGroup.h
