@@ -678,10 +678,10 @@ downloading a file like BitTorrent.</p></div>
 </dt>
 <dd>
 <p>
-  Use this proxy server for all protocols.
-  You can override this setting and specify a proxy server for a particular
-  protocol using <strong>--http-proxy</strong>, <strong>--https-proxy</strong> and <strong>--ftp-proxy</strong> options.
-  This affects all URLs.
+  Use this proxy server for all protocols.  To erase previously
+  defined proxy, use "".  You can override this setting and specify a
+  proxy server for a particular protocol using <strong>--http-proxy</strong>,
+  <strong>--https-proxy</strong> and <strong>--ftp-proxy</strong> options.  This affects all URLs.
   The format of PROXY is [<a href="http://][USER:PASSWORD@]HOST[:PORT">http://][USER:PASSWORD@]HOST[:PORT</a>]
 </p>
 </dd>
@@ -955,9 +955,9 @@ aria2c -o myfile.zip "http://mirror1/file.zip" "http://mirror2/file.zip"</td>
 </dt>
 <dd>
 <p>
-  Use this proxy server for HTTP. See also <strong>--all-proxy</strong> option.
-  This affects all URLs.
-  The format of PROXY is [<a href="http://][USER:PASSWORD@]HOST[:PORT">http://][USER:PASSWORD@]HOST[:PORT</a>]
+  Use this proxy server for HTTP.  To erase previously defined proxy,
+  use "".  See also <strong>--all-proxy</strong> option.  This affects all URLs.  The
+  format of PROXY is [<a href="http://][USER:PASSWORD@]HOST[:PORT">http://][USER:PASSWORD@]HOST[:PORT</a>]
 </p>
 </dd>
 <dt class="hdlist1">
@@ -965,9 +965,9 @@ aria2c -o myfile.zip "http://mirror1/file.zip" "http://mirror2/file.zip"</td>
 </dt>
 <dd>
 <p>
-  Use this proxy server for HTTPS. See also <strong>--all-proxy</strong> option.
-  This affects all URLs.
-  The format of PROXY is [<a href="http://][USER:PASSWORD@]HOST[:PORT">http://][USER:PASSWORD@]HOST[:PORT</a>]
+  Use this proxy server for HTTPS. To erase previously defined proxy,
+  use "". See also <strong>--all-proxy</strong> option.  This affects all URLs.  The
+  format of PROXY is [<a href="http://][USER:PASSWORD@]HOST[:PORT">http://][USER:PASSWORD@]HOST[:PORT</a>]
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1105,9 +1105,9 @@ aria2c -o myfile.zip "http://mirror1/file.zip" "http://mirror2/file.zip"</td>
 </dt>
 <dd>
 <p>
-  Use this proxy server for FTP. See also <strong>--all-proxy</strong> option.
-  This affects all URLs.
-  The format of PROXY is [<a href="http://][USER:PASSWORD@]HOST[:PORT">http://][USER:PASSWORD@]HOST[:PORT</a>]
+  Use this proxy server for FTP.  To erase previously defined proxy,
+  use "".  See also <strong>--all-proxy</strong> option.  This affects all URLs.  The
+  format of PROXY is [<a href="http://][USER:PASSWORD@]HOST[:PORT">http://][USER:PASSWORD@]HOST[:PORT</a>]
 </p>
 </dd>
 <dt class="hdlist1">
@@ -3578,7 +3578,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2010-01-12 23:26:20 JST
+Last updated 2010-01-15 17:58:00 JST
 </div>
 </div>
 </body>
